name:                habsim-me
version:             0.1.0.0
synopsis:            A public-facing web UI to habsim
-- description:         
homepage:            https://habsim.me/
license:             BSD3
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2017 Ricky Elrod
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

executable habsim-me
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4 && < 5
                     , digestive-functors >= 0.8 && < 0.9
                     --, digestive-functors-lucid >= 0.0.0.4 && < 1
                     , digestive-functors-scotty >= 0.2 && < 1
                     , habsim
                     , http-api-data >= 0.3 && < 0.4
                     , lucid >= 2.9 && < 2.10
                     , lens > 4 && < 5
                     , mtl >= 2.2 && < 3
                     , scotty >= 0.10 && < 0.12
                     , text >= 1.2 && < 1.3
                     , time >= 1.5 && < 2
                     , warp >= 3.2 && < 3.3
  hs-source-dirs:      src
  default-language:    Haskell2010
